tests/fails/error_for_enum.rs
use dynamodb_helper::DynamoDb;

#[derive(DynamoDb)]
pub enum SomeEnum {
    Nested(String)
}

fn main() {}
